--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
-.heading-style{
-    color: red;
+.side-width-style{
+    width: 100px;
+}
+.offcanvas{
+    --bs-offcanvas-width: 250px
+}
+.navbar{
+    width: 100%;
+}
+.fullwidth{
+    width: 100%;
 }
