--- a/style.css
+++ b/style.css
@@ -4,9 +4,26 @@
 .offcanvas{
     --bs-offcanvas-width: 250px
 }
-.navbar{
-    width: 100%;
-}
 .fullwidth{
     width: 100%;
+}
+a:hover{
+    background-color: purple;
+    border-radius: 3px;
+}
+.banner-style{
+    height: 600px;
+    background-color: #341f97 ;
+    background-color: #e84393 ;
+    background-image: linear-gradient(to bottom right, #e84393, #341f97);
+    color: white;
+
+}
+.banner-img-style{
+    /* background: yellow; */
+    border-radius: 50%;
+    border: 4px solid white;
+    box-shadow: 2px 5px 10px rgb(61, 60, 60);
+    margin-right: 20px;
+    margin-bottom: 20px;
 }
