--- a/style.css
+++ b/style.css
@@ -7,17 +7,42 @@
 .fullwidth{
     width: 100%;
 }
-a:hover{
+nav> a:hover{
     background-color: purple;
     border-radius: 3px;
 }
 .banner-style{
     height: 550px;
-    background-color: #341f97 ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    background-color: #616161 ;
     background-color: #e84393 ;
     background-image: linear-gradient(to bottom right, #880946, #160561);
     color: white;
 
+}
+.banner-heading-style{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 55px;
+    font-weight: bold;
+    margin-bottom: 30px;
+    color: rgb(158, 241, 255);
+}
+.banner-sub-heading-style{
+    font-size: 28px;
+    margin-bottom: 20px;
+    color: gainsboro;
+}
+.banner-para-style{
+    color: rgb(206, 205, 205);
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    width: 600px;
+}
+.banner-content-style{
+    min-width: 350px;
+    max-width: 700px;
 }
 .banner-img-style{
     /* background: yellow; */
@@ -61,8 +86,55 @@ a:hover{
 .form-style{
     margin: 0px 20px;
     border-radius: 8px;
+    padding-left: 10px;
     box-shadow: 2px 2px 8px #341f97;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+footer{
+    color: white;
+    width: 100%;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.footer-content-style{
+    text-align: center;
+}
+
+/* Resposnive design  */
+
+@media screen and (min-width: 576px) {
+    .form-style{
+        margin: 0px 200px;
+    }
+    .form-style>div{
+        padding: 50px 0px;
+    }
+}
+@media screen and (max-width: 576px) {
+    .input-style{
+        width: 350px;
+    }
+    .banner-img-style{
+        height: 200px;
+        justify-content: center;
+    }
+    .banner-style{
+        flex-direction: column;
+        height: auto;
+        padding: 50px 0px;
+    }
+    .banner-heading-style{
+        font-size: 32px;
+        margin-bottom: 20px;
+    }
+    .banner-sub-heading-style{
+        font-size: 18px;
+    }
+    .banner-para-style{
+        width: auto;
+    }
 }
