--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ nav> a:hover{
     margin-bottom: 20px;
 }
 .project-section-style{
-    height: 800px;
+    /* height: 800px; */
     color: white;
     background-color: #ecf0f1;
 }
